--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,22 @@
 {
   "name": "Galaxi Logística",
   "short_name": "Galaxi",
-  "start_url": "index.html",
+  "start_url": "home.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#008080",
-  "lang": "es",
+  "theme_color": "#4285f4",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "icon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "icon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ]
 }
+
 
