--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,25 @@
 {
-  "start_url": "/Galaxi_amber/home.html",
-"scope": "/Galaxi_amber/",
-"display": "standalone",
-"name": "Galaxi Logística",
-"short_name": "Galaxi",
-
+  "name": "Galaxi Logística",
+  "short_name": "Galaxi",
+  "start_url": "home.html",
+  "scope": "./",
+  "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#4285f4",
+  "lang": "es",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon.png",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ]
 }
+
 
 
